// ParanoidNetwork API v0.3.0

syntax = "proto3";

package paranoid;

service ParanoidNetwork {
    // Utility calls

    // Used by a new node to let other nodes it is available to join the cluster.
    rpc Ping (PingRequest) returns (EmptyMessage) {}

    // Cryptography calls
    rpc SendKeyPiece (KeyPiece) returns (EmptyMessage) {}
    rpc RequestKeyPiece (PingRequest) returns (KeyPiece) {}
}

message EmptyMessage {}

message PingRequest {
    string ip = 1;  // required
    string port = 2;  // required
    string common_name = 3; // required
    string uuid = 4; // required
}

message KeyPiece {
    bytes data = 1; // required
    bytes parent_fingerprint = 2; // required
    bytes prime = 3; // required
    int64 seq = 4; // required

    // The Node data for the node who owns this KeyPiece
    PingRequest owner_node = 5; // required
}
